fix: bundle find

--- a/updates/v2-v3.2.0.yaml
+++ b/updates/v2-v3.2.0.yaml
@@ -2,7 +2,7 @@
   find:
     paths: "{{ application_folder_destination }}/mod"
     patterns: "manifest.xml"
-    contains: "bundled"
+    contains: ".*bundled.*"
     recurse: "yes"
   register: "bundled_mods_manifests"
 - name: "Remove bundled mods"
