--- a/updates/v2-v3.2.0.yaml
+++ b/updates/v2-v3.2.0.yaml
@@ -89,7 +89,7 @@
 - name: "Install event_calendar fork"
   git:
     repo: "https://github.com/wabuehamm/event_calendar.git"
-    dest: "{{ application_folder_destination }}/mod"
+    dest: "{{ application_folder_destination }}/mod/event_calendar"
     version: "issue-14"
 - name: "Install wabue mod"
   git:
