fix: Remove event_calendar and wabue before installing them

--- a/updates/v2-v3.2.0.yaml
+++ b/updates/v2-v3.2.0.yaml
@@ -29,6 +29,8 @@
     - "hypeNotifications"
     - "hypeEmbed"
     - "hypeLists"
+    - "event_calendar"
+    - "wabue"
 - name: "Update supported mods and add additional mods"
   include_tasks:
     file: "tasks/install_module.yaml"
