--- a/tasks/install_module.yaml
+++ b/tasks/install_module.yaml
@@ -13,6 +13,8 @@
   unarchive:
     src: "{{ application_folder_destination }}/mod/download_module"
     dest: "{{ application_folder_destination }}/mod"
+    owner: "{{ owner_destination }}"
+    group: "{{ group_destination }}"
 - name: "{{ item['mod'] }} - Remove archive"
   file:
     path: "{{ application_folder_destination }}/mod/download_module"
