fix: Use elgg-cli for upgrades

--- a/updates/v2-v3.2.0.yaml
+++ b/updates/v2-v3.2.0.yaml
@@ -115,9 +115,7 @@
 - name: "Run update"
   tags:
     - "uncheckable"
-  uri:
-    url: "{{ url_destination }}/upgrade.php"
-    timeout: "600"
+  command: "php vendor/bin/elgg-cli upgrade async -v chdir={{ application_folder_destination }}"
 - name: "Activate new plugins"
   tags:
     - "uncheckable"
