feat: Use prioritize command

--- a/updates/v2-v3.2.0.yaml
+++ b/updates/v2-v3.2.0.yaml
@@ -123,33 +123,4 @@
 - name: "Put wabue plugin at the end of the plugin ist"
   tags:
     - "uncheckable"
-  block:
-  - name: "Get token from login page"
-    uri:
-      url: "{{ url_destination }}"
-      return_content: "yes"
-    register: "login_page"
-  - name: "Login to site"
-    uri:
-      url: "{{ url_destination }}/action/login"
-      body_format: form-urlencoded
-      body:
-      - [ "__elgg_token", "{{ login_page.content | regex_search('<input name=\"__elgg_token\" value=\"([^\"]+)\"') }}" ]
-      - [ "__elgg_ts", "{{ login_page.content | regex_search('<input name=\"__elgg_ts\" value=\"([^\"]+)\"') }}" ]
-      - [ "username", "{{ application_admin_username }}" ]
-      - [ "password", "{{ application_admin_password }}" ]
-    register: "logged_in"
-  - name: "Open plugins page"
-    uri:
-      url: "{{ url_destination }}/admin/plugins"
-      return_content: "yes"
-      headers:
-        Cookie: "{{ logged_in.set_cookie }}"
-    register: "plugins_page"
-  - name: "Put wabue plugin at the bottom of the list"
-    uri: 
-      url: "{{ url_destination }}/action/admin/plugins/set_priority?plugin_guid=51&priority=last&{{ url_suffix }}"
-      headers:
-        Cookie: "{{ logged_in.set_cookie }}"
-    vars:
-      url_suffix: "{{ plugins_page | regex_search('set_priority?plugin_guid=51&amp;priority=last&amp;([^\"]+)\"') }}"
+  command: "php vendor/bin/elgg-cli wabue:prioritize chdir={{ application_folder_destination }}"
