--- a/playbook.yaml
+++ b/playbook.yaml
@@ -322,6 +322,10 @@
         delete: "yes"
         owner: "yes"
         group: "yes"
+    - name: "Activate plugin"
+      tags:
+        - "uncheckable"
+      command: "php vendor/bin/elgg-cli plugins:activate -- filetransport chdir={{ application_folder_destination }}"
     - name: "Clean up"
       file:
         path: "{{ remote_tempdir.path }}"
