fix: moved plugin configuration to playbook

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -369,6 +369,20 @@
         state: "directory"
         recurse: "yes"
 
+- name: "Configure plugins"
+  hosts: application_destination
+  tags:
+    - "uncheckable"
+  tasks:
+    - name: "Put wabue plugin at the end of the plugin ist"
+      tags:
+        - "uncheckable"
+      command: "php vendor/bin/elgg-cli wabue:prioritize chdir={{ application_folder_destination }}"
+    - name: "Configure plugins"
+      tags:
+        - "uncheckable"
+      command: "php vendor/bin/elgg-cli wabue:configure chdir={{ application_folder_destination }}"
+
 - name: "Set announcement banner"
   hosts: application_destination
   tags:
