--- a/playbook.yaml
+++ b/playbook.yaml
@@ -160,6 +160,7 @@
       unarchive:
         src: "{{ remote_tempdir.path }}/application.tar.bz2"
         dest: "{{ application_folder_destination }}"
+        remote_src: "yes"
     - name: "Cleanup"
       tags:
         - "uncheckable"
@@ -265,6 +266,7 @@
       unarchive:
         src: "{{ remote_tempdir.path }}/data.tar.bz2"
         dest: "{{ data_folder_destination }}"
+        remote_src: "yes"
     - name: "Set owner of event_calendar fork"
       file:
         path: "{{ data_folder_destination }}"
@@ -310,6 +312,7 @@
         dest: "{{ remote_tempdir.path }}"
         owner: "{{ owner_destination }}"
         group: "{{ group_destination }}"
+        remote_src: "yes"
     - name: "Move file transport module to module directory"
       synchronize:
         src: "{{ remote_tempdir.path }}/elgg-plugin-filetransport-master/"
