--- a/playbook.yaml
+++ b/playbook.yaml
@@ -299,13 +299,15 @@
         state: "absent"
 
 - name: "Add file transport module"
-  include_tasks:
-    file: "tasks/install_module.yaml"
-  loop:
-    - mod: "filetransport"
-      url: "https://github.com/wabuehamm/elgg-plugin-filetransport/archive/master.zip"
-      rename_to: "filetransport"
-      
+  hosts: application_destination
+  tasks:
+    include_tasks:
+      file: "tasks/install_module.yaml"
+    loop:
+      - mod: "filetransport"
+        url: "https://github.com/wabuehamm/elgg-plugin-filetransport/archive/master.zip"
+        rename_to: "filetransport"
+
 - name: "Run updates"
   tags:
     - "updates"
