--- a/playbook.yaml
+++ b/playbook.yaml
@@ -147,6 +147,7 @@
         dest: "{{ remote_tempdir.path }}"
     - name: "Empty application folder"
       shell: "rm -rf * .htaccess chdir={{ application_folder_destination }}"
+      warn: false
     - name: "Unarchive application archive"
       tags:
         - "uncheckable"
@@ -198,6 +199,10 @@
       lineinfile:
         path: "{{ application_folder_destination }}/elgg-config/settings.php"
         line: "$CONFIG->dataroot = '{{ data_folder_destination }}';"
+    - name: "Add wwwroot"
+      lineinfile:
+        path: "{{ application_folder_destination }}/elgg-config/settings.php"
+        line: "$CONFIG->wwwroot = '{{ url_destination }}';"
 
 - name: "Transfer data folder from source"
   tags:
@@ -246,6 +251,7 @@
         dest: "{{ remote_tempdir.path }}"
     - name: "Empty data folder"
       shell: "rm -rf * chdir={{ data_folder_destination }}"
+      warn: false
     - name: "Unarchive data archive"
       tags:
         - "uncheckable"
